# DFMO

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  DFMO.f90  Manifest.toml  Project.toml  README.md  README.original.txt  README.txt  TC-mingw.cmake  build_libs.yml  compile_win.sh  flake.nix  main.f90  makefile  modules_DFMO.f90  opt_multiobj.f90  primes.inc  problem_abstract.f03  problem_shim.f90  problem_standalone.f03  subroutines_DFMO.f90
.github/workflows/: build_libs.yml  releases.yml
src/: CustomPrinting.jl  DFMO.f90  DFMO.jl  DFMO_old.jl  Project.toml  README.md  cache.jl  filter.jl  halton.f90  halton.jl  main.f90  playground.jl  problem.f90  qsortd.f90  sobol.f90  utils.jl
